integration-tests/tests/snapshots/postgres__table_and_view_two_schemas_0_0_0.snap
---
source: integration-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: table_and_view_two_schemas
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(3673,1911)
    properties:
      a_id = 1 (uint)
      a_info = "point_1"
