integration-tests/tests/snapshots/postgres__table_and_view_two_schemas_dot_1_0_0_0.snap
---
source: integration-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: table_and_view_two_schemas.1
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(3673,1911)
    properties:
      b_id = 1 (uint)
      b_info = "point_1"
