integration-tests/tests/snapshots/postgres__table_and_view_two_schemas_tilejson.snap
---
source: integration-tests/tests/postgres.rs
expression: source_tilejson
---
{
  "bounds": [
    0.0012741832,
    0.0000988181,
    0.0012921495,
    0.0001169055
  ],
  "description": "schema_a.table_and_view_two_schemas.a_geom",
  "name": "table_and_view_two_schemas",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/table_and_view_two_schemas/{z}/{x}/{y}"
  ],
  "vector_layers": [
    {
      "fields": {
        "a_id": "int4",
        "a_info": "text"
      },
      "id": "table_and_view_two_schemas"
    }
  ]
}
