integration-tests/tests/snapshots/postgres__table_name_existing_two_schemas_dot_1_0_0_0.snap
---
source: integration-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: table_name_existing_two_schemas.1
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: RING[count=5](2162 1816,2276 1551,2503 1551,2389 1934,2162 1816)[OUTER]
    properties:
      b_id = 1 (uint)
      b_info = "polygon_1"
